Проблема с некорректной работой кнопки закрытия (крестика) в модальном окне деталей администраторов исправлена
добавил прямой обработчик события onclick непосредственно в функцию, которая создает и показывает это модальное окно.
Теперь, когда модальное окно открывается, к кнопке с id="closeAdminDayDetailsModal" сразу привязывается функция, которая при клике будет скрывать модальное окно. Такой подход гарантирует, что обработчик события будет назначен каждый раз, когда открывается окно, даже если по каким-то причинам ранее добавленный обработчик не сработал.
Это решение должно исправить проблему с крестиком, и теперь модальное окно будет корректно закрываться при нажатии на него.
Добавили прямой обработчик события для кнопки закрытия непосредственно в функцию, которая создаёт и показывает модальное окно:
Apply to index.html
;
Модальное окно также должно закрываться:
При клике вне содержимого окна (благодаря обработчику на самом модальном окне)
При нажатии клавиши Escape (благодаря обработчику на уровне документа)

--- a/index.html
+++ b/index.html
@@ -3482,6 +3482,11 @@
       
       // Показываем модальное окно
       adminDayDetailsModal.classList.remove('hidden');
+      
+      // Добавляем обработчик для кнопки закрытия непосредственно в этой функции
+      document.getElementById('closeAdminDayDetailsModal').onclick = function() {
+        adminDayDetailsModal.classList.add('hidden');
+      };
     }
 
     // === Логика Модального Окна Назначения Админа ===
