--- a/index.html
+++ b/index.html
@@ -178,64 +178,8 @@
       }
     }
   </style>
-  <!-- Put this script tag to the <head> of your page -->
-  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-
-  <!-- Add styles for Apple Design -->
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f5f5f7;
-      color: #1d1d1f;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    .section {
-      margin-bottom: 40px;
-      padding: 20px;
-      background-color: #ffffff;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    }
-    iframe {
-      border-radius: 12px;
-      border: none;
-    }
-  </style>
 </head>
 <body>
-  <!-- Main content -->
-  <div class="container">
-    <!-- VK Group -->
-    <div class="section">
-      <h2>Наше сообщество ВКонтакте</h2>
-      <div id="vk_groups"></div>
-      <script type="text/javascript">
-        VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: 600, color1: "FFFFFF", color2: "363636", color3: "b457a6"}, 227237589);
-      </script>
-    </div>
-
-    <!-- Yandex Map -->
-    <div class="section">
-      <h2>Яндекс Карта</h2>
-      <iframe src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" width="100%" height="400" frameborder="0"></iframe>
-    </div>
-
-    <!-- Yandex Reviews -->
-    <div class="section">
-      <h2>Отзывы на Яндекс Картах</h2>
-      <div style="width:100%;height:800px;overflow:hidden;position:relative;">
-        <iframe style="width:100%;height:100%;border-radius:12px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/180466118783?comments"></iframe>
-        <a href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты</a>
-      </div>
-    </div>
-  </div>
-
   <!-- Форма входа -->
   <div id="authContainer" class="fixed inset-0 bg-white bg-opacity-90 flex items-center justify-center z-50 hidden" onclick="event.target === this && this.classList.add('hidden')">
     <div class="bg-white rounded-3xl shadow-2xl max-w-md w-full p-8 relative" onclick="event.stopPropagation()">
@@ -3836,5 +3780,21 @@
       }
     });
   </script>
+
+  <!-- Виджет ВКонтакте -->
+  <div id="vk_groups"></div>
+  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+  <script type="text/javascript">
+    VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: 600, color1: "FFFFFF", color2: "363636", color3: "b457a6"}, 227237589);
+  </script>
+
+  <!-- Яндекс Карты -->
+  <iframe src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" width="560" height="400" frameborder="0"></iframe>
+
+  <!-- Отзывы -->
+  <div style="width:560px;height:800px;overflow:hidden;position:relative;">
+    <iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/180466118783?comments"></iframe>
+    <a href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты</a>
+  </div>
 </body>
 </html>
