--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=SF+Pro+Text:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet" />
+  <!-- VK Widget Script -->
+  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
   <style>
     body {
       font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
@@ -176,6 +178,32 @@
       #client-month-nav {
           justify-content: center;
       }
+
+      /* Адаптивные стили для виджетов на мобильных */
+      .grid.lg\\:grid-cols-3 {
+        grid-template-columns: 1fr; /* Один столбец на мобильных */
+      }
+
+      /* Уменьшаем высоту виджетов на мобильных */
+      .widget-iframe {
+        height: 300px !important;
+      }
+    }
+
+    /* Стили для виджетов */
+    .widget-container {
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .widget-container:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    }
+
+    /* Стили для iframe виджетов */
+    .widget-iframe {
+      border-radius: 16px;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -502,6 +530,65 @@
           </ul>
           <p class="mt-4 text-gray-500 italic text-sm">Можно заказать свою еду и напитки</p>
         </div>
+      </div>
+    </section>
+
+    <!-- Виджеты: ВКонтакте, Яндекс Карты, Отзывы -->
+    <section class="mb-12">
+      <h2 class="text-2xl font-semibold mb-8 text-center text-gray-900 tracking-tight">Мы в социальных сетях и на картах</h2>
+      <div class="grid grid-cols-1 lg:grid-cols-3 gap-8 max-w-7xl mx-auto">
+        
+        <!-- Виджет ВКонтакте -->
+        <div class="widget-container bg-white rounded-3xl shadow-lg p-6 border border-gray-200 flex flex-col">
+          <div class="flex items-center mb-4">
+            <i class="fab fa-vk text-blue-600 text-2xl mr-3"></i>
+            <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Наше сообщество</h3>
+          </div>
+          <div class="flex-grow flex items-center justify-center">
+            <div id="vk_groups" class="w-full"></div>
+          </div>
+        </div>
+
+        <!-- Виджет Яндекс Карты -->
+        <div class="widget-container bg-white rounded-3xl shadow-lg p-6 border border-gray-200 flex flex-col">
+          <div class="flex items-center mb-4">
+            <i class="fas fa-map-marker-alt text-red-600 text-2xl mr-3"></i>
+            <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Мы на карте</h3>
+          </div>
+          <div class="flex-grow flex items-center justify-center">
+            <iframe 
+              src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" 
+              width="100%" 
+              height="400" 
+              frameborder="0"
+              class="widget-iframe">
+            </iframe>
+          </div>
+        </div>
+
+        <!-- Виджет Отзывы -->
+        <div class="widget-container bg-white rounded-3xl shadow-lg p-6 border border-gray-200 flex flex-col">
+          <div class="flex items-center mb-4">
+            <i class="fas fa-star text-yellow-500 text-2xl mr-3"></i>
+            <h3 class="text-xl font-semibold text-gray-900 tracking-tight">Отзывы клиентов</h3>
+          </div>
+          <div class="flex-grow flex items-center justify-center">
+            <div style="width:100%;height:400px;overflow:hidden;position:relative;">
+              <iframe 
+                class="widget-iframe"
+                style="width:100%;height:100%;border:1px solid #e6e6e6;box-sizing:border-box" 
+                src="https://yandex.ru/maps-reviews-widget/180466118783?comments">
+              </iframe>
+              <a 
+                href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" 
+                target="_blank" 
+                style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">
+                VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты
+              </a>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
   </main>
@@ -3779,22 +3866,21 @@
         maxHelperHoursNote.classList.add('hidden');
       }
     });
+
+    // Инициализация виджета ВКонтакте
+    document.addEventListener('DOMContentLoaded', function() {
+      // Проверяем, что VK API загружен
+      if (typeof VK !== 'undefined' && VK.Widgets) {
+        VK.Widgets.Group("vk_groups", {
+          mode: 4, 
+          wide: 1, 
+          height: 400, 
+          color1: "FFFFFF", 
+          color2: "363636", 
+          color3: "b457a6"
+        }, 227237589);
+      }
+    });
   </script>
-
-  <!-- Виджет ВКонтакте -->
-  <div id="vk_groups"></div>
-  <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
-  <script type="text/javascript">
-    VK.Widgets.Group("vk_groups", {mode: 4, wide: 1, height: 600, color1: "FFFFFF", color2: "363636", color3: "b457a6"}, 227237589);
-  </script>
-
-  <!-- Яндекс Карты -->
-  <iframe src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=180466118783" width="560" height="400" frameborder="0"></iframe>
-
-  <!-- Отзывы -->
-  <div style="width:560px;height:800px;overflow:hidden;position:relative;">
-    <iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/180466118783?comments"></iframe>
-    <a href="https://yandex.ru/maps/org/vr_lounge_igrovoy_ray/180466118783/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">VR Lounge - Игровой Рай на карте Кольчугино — Яндекс Карты</a>
-  </div>
 </body>
 </html>
