Поделиться Исправление для мобильного Telegram
 Что изменилось:
Для мобильных устройств + Telegram:
Раньше: https://t.me/share/url?url=...&text=Посмотрите отзывы о VR Lounge! ⭐
Теперь: https://t.me/share/url?url=... (только URL, без текста)
Для десктопа Telegram:
Остается как было: с кодированным текстом
💡 Логика решения:
Проблема: Мобильное приложение Telegram автоматически кодирует русский текст
Решение: Отправляем только URL, пользователь сам добавит комментарий
Преимущества:
Нет проблем с кодированием
Пользователь может написать свой персональный комментарий
Ссылка всегда работает корректно

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
       console.log('Original text:', shareText);
       console.log('Encoded text:', encodedShareText);
       
+      // Для мобильного Telegram отправляем только URL - пользователь сам добавит комментарий
+      if (isMobile && type === 'reviews') {
+        console.log('Мобильный Telegram: отправляем только URL, текст пользователь добавит сам');
+      }
+      
       // WhatsApp
       const whatsappEl = document.getElementById('shareWhatsApp');
       if (whatsappEl) {
@@ -192,7 +197,8 @@
       const telegramEl = document.getElementById('shareTelegram');
       if (telegramEl) {
         if (isMobile) {
-          telegramEl.href = `https://t.me/share/url?url=${url}&text=${shareText}`;
+          // Для мобильных Telegram - только URL без текста (избегаем проблем с кодированием)
+          telegramEl.href = `https://t.me/share/url?url=${url}`;
         } else {
           telegramEl.href = `https://t.me/share/url?url=${encodedUrl}&text=${encodedShareText}`;
         }
